--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fontsource/orbitron": "^4.5.11",
+    "animejs": "^3.2.1",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-vue": "^4.0.0",
